# Intel4-Final-Project

./: README.md
Linetracer/Arduino_code/project/: project.ino
Linetracer/Arduino_code/project/step_motor/: step_motor.ino
Linetracer/SENSORCODE/: .cproject  .project  SENSORCODE Debug.launch  SENSORCODE.ioc
Linetracer/SENSORCODE/Core/Inc/: main.h
Linetracer/SENSORCODE/Core/Src/: main.c
Linetracer/SENSORCODE/Debug/: SENSORCODE.elf  SENSORCODE.list  SENSORCODE.map  makefile
Linetracer/SENSORCODE/Debug/Core/Src/: main.cyclo  main.su
Linetracer/SENSORCODE/Src/: main.c
Linetracer/kjh5/: .cproject  .project  kjh5 Debug.launch  kjh5.ioc
Linetracer/kjh5/Core/Inc/: main.h
Linetracer/kjh5/Core/Src/: main.c  stm32f4xx_hal_msp.c
Linetracer/kjh5/Debug/: kjh5.elf  kjh5.list  kjh5.map  makefile
Linetracer/kjh5/Debug/Core/Src/: main.cyclo  main.su  (+2 more)
Linetracer/kjhrtos/: .cproject  .mxproject  .project  kjhrtos Debug.launch  kjhrtos.ioc
Linetracer/kjhrtos/Core/Src/: main.c  stm32f4xx_hal_msp.c
Linetracer/kjhrtos/Debug/: kjhrtos.elf  kjhrtos.list  kjhrtos.map  makefile
Linetracer/linetracer_wifi/: .cproject  .project  linetracer_wifi Debug.launch  linetracer_wifi.ioc
Linetracer/linetracer_wifi/Core/Inc/: main.h
Linetracer/linetracer_wifi/Core/Src/: esp.c  main.c  stm32f4xx_hal_msp.c
Linetracer/linetracer_wifi/Debug/: linetracer_wifi.elf  linetracer_wifi.list  linetracer_wifi.map  makefile
Linetracer/nucleo_f411re_uart2_printf_uart6_wifi/: nucleo_f411re_uart2_printf_uart6_wifi Debug (1).launch  nucleo_f411re_uart2_printf_uart6_wifi.ioc
Linetracer/nucleo_f411re_uart2_printf_uart6_wifi/Core/Inc/: esp.h
Linetracer/nucleo_f411re_uart2_printf_uart6_wifi/Core/Src/: esp.c  main.c
Linetracer/nucleo_f411re_uart2_printf_uart6_wifi/Debug/: makefile  nucleo_f411re_uart2_printf_uart6_wifi.elf  nucleo_f411re_uart2_printf_uart6_wifi.list  nucleo_f411re_uart2_printf_uart6_wifi.map
Linetracer/tem_sensorcode/: .cproject  .project  tem_sensorcode Debug.launch  tem_sensorcode.ioc
Linetracer/tem_sensorcode/Core/Inc/: main.h
Linetracer/tem_sensorcode/Core/Src/: main.c  stm32f4xx_hal_msp.c
Linetracer/tem_sensorcode/Debug/: makefile  tem_sensorcode.elf  tem_sensorcode.list  tem_sensorcode.map
Server/Linetracer/Inc/: application.h  uartIO.h  wifiCom.h
Server/Linetracer/Src/: application.c  main.c  uartIO.c  wifiCom.c
Server/Qt_DesktopApp/SmartTurtleFarm/: STF_Image.qrc  SmartTurtleFarm.pro  SmartTurtleFarm.pro.user.2f566a1  mainwidget.cpp  mainwidget.h  stfserver.cpp  stfserver.h  tab1controlpannel.cpp  tab1controlpannel.ui  tab2potstatuspannel.ui  tab3turtlebotcontrolpannel.ui  tab4adminlogin.ui  tab4adminpannel.ui
Server/Qt_DesktopApp/smart_turtle_farm/: CMakeLists.txt  STF_Image.qrc  smart_turtle_farm.pro  smart_turtle_farm.pro.user.1da2d2f
Server/Qt_DesktopApp/smart_turtle_farm/include/smart_turtle_farm/: rosnode.h  stftcpclienthandler.h  stftcpserver.h  stftcpsqlclienthandler.h  tab1controlpannel.h  tab3turtlebotcontrolpannel.h
Server/Qt_DesktopApp/smart_turtle_farm/smart_turtle_farm/: STF_Image.qrc  mainwidget.cpp  mainwidget.ui  smart_turtle_farm.pro  stftcpserver.cpp  stfudpserver.cpp  tab2potstatuspannel.cpp  tab2potstatuspannel.h  tab3turtlebotcontrolpannel.cpp  tab3turtlebotcontrolpannel.ui  tab4adminlogin.cpp  tab4adminlogin.h  tab4adminlogin.ui  tab4adminpannel.cpp  tab4adminpannel.h  tab4adminpannel.ui
Server/Qt_DesktopApp/smart_turtle_farm/src/: main.cpp  mainwidget.cpp  stftcpclienthandler.cpp  stftcpserver.cpp  stftcpsqlclienthandler.cpp  tab2potstatuspannel.cpp  tab3turtlebotcontrolpannel.cpp  tab4adminlogin.cpp  tab4adminpannel.cpp
Server/Qt_DesktopApp/smart_turtle_farm/ui/: tab1controlpannel.ui  tab2potstatuspannel.ui  tab4adminlogin.ui  tab4adminpannel.ui
Server/Socket/Turtlebot/: Makefile  callback_example.c  callback_example.h  iot_client_cbf.c  iot_client_cbf.h  iot_server_cbf.c
Turtlebot/map/: map.pgm
Turtlebot/smart_turtle_farm/: CMakeLists.txt  STF_Image.qrc  package.xml  smart_turtle_farm.pro  smart_turtle_farm.pro.user.cb80ce7
Turtlebot/smart_turtle_farm/include/smart_turtle_farm/: mainwidget.h  rosnode.h  socketclient.h  stftcpserver.h  stfudpserver.h  tab3turtlebotcontrolpannel.h
Turtlebot/smart_turtle_farm/src/: main.cpp  mainwidget.cpp  rosnode.cpp  socketclient.cpp  stftcpserver.cpp  stfudpserver.cpp  tab1controlpannel.cpp  tab3turtlebotcontrolpannel.cpp
Turtlebot/smart_turtle_farm/ui/: tab1controlpannel.ui  tab2potstatuspannel.ui  tab3turtlebotcontrolpannel.ui  tab4adminlogin.ui  tab4adminpannel.ui
Turtlebot/tomato_detect/: deeplearningserver.py
(+14 files in other folders)
